@@ -92,6 +92,11 @@ Help: prints a list of options.
 .I \-V, \-\-version
 Prints the current version.
 
+.TP
+.I \-b, \-\-batch
+processes the file, saves it afterwards. Will halt if wxMaxima finds an
+error message in maxima's output and pause if maxima asks a question.
+
 .SH "SEE ALSO" 
 .PP 
 maxima (1), xmaxima (1). 
