@@ -810,6 +810,13 @@ command line switches, though.
 @item -h or --help: Output a short help text
 @item -o or --open: Open the filename given as argument to this
       command-line switch
+@item -b or --batch: If the command-line opens a file all cells in this file are
+      evaluated and the file is saved afterwards. This is for example useful if
+      the sesson described in the file makes maxima generate output files.
+      Batch-processing will be stopped if wxMaxima detects that maxima has output
+      an error and will pause if maxima has a question: Mathematics is somewhat
+      interactive by nature so a completely interaction-free batch processing
+      cannot always be guaranteed.
 @item (Only on windows): -f or --ini: Use the init file that was
       given as argument to this command-line switch
 @end itemize
