@@ -17,6 +17,8 @@ Current:
   * A fourth sectioning level
   * Entering uppercase greek letters is now easier.
   * Syntax highlighting in code cells.
+  * A "halt on error" feature.
+  * A batch mode that pauses evaluation if maxima asks a question.
 
 15.04.0:
   * wxWidgets 3.0 is now a mandatory requirement
